--- a/index.html
+++ b/index.html
@@ -3,118 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Laptop Viewer</title>
+  <title>Interior AR Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-    }
-    model-viewer {
-      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
-    }
-    .HotspotAnnotation {
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 12px;
-    }
-    #ar-button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    #ar-button:hover {
-      background: #0056b3;
-    }
-    #ar-prompt {
-      position: absolute;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      display: none;
-    }
-    #ar-prompt img {
-      width: 40px;
+      background: #f4f4f4;
     }
   </style>
 </head>
 <body>
-  <button id="ar-button">View in AR</button>
-  
   <model-viewer 
-    src="https://cdn.glitch.global/2762574e-c385-422d-a1a4-905f5da98282/laptop.glb?v=1735399195477" 
-    ios-src="https://cdn.glitch.global/2762574e-c385-422d-a1a4-905f5da98282/laptop.usdz?v=1735399205423"
+    src="https://cdn.glitch.me/0b51cbe4-2649-448e-827b-cfebaf79a0f3/bathroom_interior.glb?v=1735963906192" 
+    ios-src="https://cdn.glitch.me/0b51cbe4-2649-448e-827b-cfebaf79a0f3/Bathroom_Interior.usdz?v=1735963880357"
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
+    touch-action="pan-y" 
     tone-mapping="neutral" 
-    poster="poster.webp" 
-    shadow-intensity="1.74" 
+    shadow-intensity="1" 
     exposure="1"
-    field-of-view="30deg"
+    environment-image="neutral"
     id="viewer">
-    
-    <button class="Hotspot" slot="hotspot-1" data-position="-1.642m 2.28m -1.855m" data-normal="0.982m 0.19m 0m">
-      <div class="HotspotAnnotation">15" Display</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-2" data-position="-1.603m 2.08m 1.745m" data-normal="0.982m 0.19m 0m">
-      <div class="HotspotAnnotation">Long Battery Life</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-3" data-position="1.193m 0.07m -1.801m" data-normal="0m 1m 0m">
-      <div class="HotspotAnnotation">Lightweight Build</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-4" data-position="0.186m 0.078m 1.59m" data-normal="1m 0m 0m">
-      <div class="HotspotAnnotation">Backlit Keyboard</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-5" data-position="-1.252m 0.25m -1.646m" data-normal="0.994m -0.108m 0m">
-      <div class="HotspotAnnotation">SSD Storage</div>
-    </button>
-    
-    <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
-    </div>
-    <div id="ar-prompt">
-      <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-    </div>
   </model-viewer>
 
   <script>
-    const arButton = document.getElementById('ar-button');
     const modelViewer = document.getElementById('viewer');
 
-    // Add event listener for "View in AR" button
-    arButton.addEventListener('click', () => {
+    // Wait for the model to load, then trigger AR directly
+    modelViewer.addEventListener('load', () => {
+      // Automatically trigger AR mode
       modelViewer.activateAR();
-    });
-
-    let isZoomedIn = false; // Tracks the zoom state
-    let defaultCameraOrbit = modelViewer.getAttribute('camera-orbit');
-
-    // Handle hotspot clicks
-    modelViewer.addEventListener('click', (event) => {
-      const hotspot = event.target.closest('.Hotspot');
-      if (hotspot) {
-        const position = hotspot.getAttribute('data-position');
-        if (!isZoomedIn) {
-          modelViewer.cameraOrbit = position.replace(/m/g, '') + ' 1m';
-          modelViewer.fieldOfView = '15deg'; // Narrow the view when zooming in
-          isZoomedIn = true;
-        } else {
-          modelViewer.cameraOrbit = defaultCameraOrbit;
-          modelViewer.fieldOfView = '30deg'; // Reset the view
-          isZoomedIn = false;
-        }
-      }
     });
   </script>
 </body>
