--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
   <model-viewer 
     src="https://cdn.glitch.me/0b51cbe4-2649-448e-827b-cfebaf79a0f3/interior.glb?v=1735965651248"
+    ios-src="https://cdn.glitch.me/0b51cbe4-2649-448e-827b-cfebaf79a0f3/interior.usdz?v=1735966037702"
     ar 
     ar-modes="webxr scene-viewer quick-look"
     camera-controls 
